@@ -1,9 +1,9 @@
 {
-  "timestamp" : "2022-08-09T08:19:25Z",
+  "timestamp" : "2022-08-09T16:20:57Z",
   "count_outdated" : 677,
   "uniques_outdated" : 244,
-  "count" : 688,
-  "uniques" : 251,
+  "count" : 690,
+  "uniques" : 252,
   "views" : [
     {
       "timestamp": "2022-07-26T00:00:00Z",
@@ -51,6 +51,13 @@
       "timestamp": "2022-08-06T00:00:00Z",
       "count": 1,
       "count_minmax": [ 1, 1 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ]
+    },
+    {
+      "timestamp": "2022-08-09T00:00:00Z",
+      "count": 2,
+      "count_minmax": [ 2, 2 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ]
     }
