@@ -1,6 +1,6 @@
 {
-  "count": 11,
-  "uniques": 7,
+  "count": 13,
+  "uniques": 8,
   "views": [
     {
       "timestamp": "2022-07-26T00:00:00Z",
@@ -35,6 +35,11 @@
     {
       "timestamp": "2022-08-06T00:00:00Z",
       "count": 1,
+      "uniques": 1
+    },
+    {
+      "timestamp": "2022-08-09T00:00:00Z",
+      "count": 2,
       "uniques": 1
     }
   ]
